2011-02-23  Andrew John Hughes  <ahughes@redhat.com>

	* INSTALL:
	Update with native2ascii option and JamVM.
	Mention --without-hotspot-build in HotSpot
	documentation.

2011-02-22  Andrew John Hughes  <ahughes@redhat.com>

	Use more accurate ENABLE_CACAO rather
	than WITH_CACAO.
	* Makefile.am:
	Replace WITH_CACAO throughout.
	* acinclude.m4: Likewise.

2011-02-22  Andrew John Hughes  <ahughes@redhat.com>

	PR497: Mercurial revision detection not very reliable
	* acinclude.m4:
	(IT_OBTAIN_HG_REVISIONS): Use hg id rather
	than hg tip.

2011-02-22  Andrew John Hughes  <ahughes@redhat.com>

	PR103: Usage of native2ascii during bootstrap.
	* Makefile.am:
	(bootstrap-directory-ecj): Symlink native2ascii.
	* NEWS: Updated.
	* acinclude.m4:
	(IT_FIND_NATIVE2ASCII): Added.
	* configure.ac: Call IT_FIND_NATIVE2ASCII.

2011-05-23  Andrew John Hughes  <ahughes@redhat.com>

	* acinclude.m4:
	(IT_LOCATE_NSS): Add --enable-nss logic.
	* configure.ac:
	Move --enable-nss logic to IT_LOCATE_NSS macro.
	Call IT_LOCATE_NSS macro.

2011-05-23  Pavel Tisnovsky  <ptisnovs@redhat.com>

	* test/jtreg/excludelist.jdk.jtx:
	Added LocaleEnhanceTest to a JTreg exclude list,
	because the test base class can not be used
	in IcedTea due to questionable licence.

2011-05-22  Andrew John Hughes  <ahughes@redhat.com>

	* Makefile.am:
	(replace-hotspot): Revert to copying not
	linking; breaks the build in strange ways.

2011-05-20  Andrew John Hughes  <ahughes@redhat.com>

	* acinclude.m4:
	Rename top-level IT_FIND_JAVAC
	to IT_FIND_JAVA_COMPILER.
	* configure.ac:
	Call IT_FIND_JAVA_COMPILER not
	IT_FIND_JAVAC.

2011-05-20  Andrew John Hughes  <ahughes@redhat.com>

	* Makefile.am:
	(extract-hotspot): Use absolute path when
	creating symbolic link.

2011-05-20  Andrew John Hughes  <ahughes@redhat.com>

	* Makefile.am:
	(extract): Depend on extract-hotspot and
	sanitise-hotspot.
	(extract-jaxws): Depend on sanitise-openjdk
	rather than extract-openjdk to get the
	complete version.