@@ -1,5 +1,13 @@
 2011-02-23  Andrew John Hughes  <ahughes@redhat.com>
 
+	* INSTALL: Mention --with-alt-jamvm-src-zip.
+	* acinclude.m4:
+	(IT_CHECK_WITH_JAMVM_SRC_ZIP): Use a single
+	AM_CONDITIONAL.  Check that the specified value
+	is a valid file using test.
+
+2011-02-23  Andrew John Hughes  <ahughes@redhat.com>
+
 	* INSTALL:
 	Update with native2ascii option and JamVM.
 	Mention --without-hotspot-build in HotSpot
